Fixes alignment of search icon

--- a/style.less
+++ b/style.less
@@ -532,7 +532,7 @@ hyperwall is: 3 1280px screens wide and 3 720pxs screens high.
 
     .action_icons {
       float: right;
-      margin-top: 0.7em;
+      margin-top: 0.2em;
 
       #activate_search {
         float: right;
